[b]0.43beta[/b] (Apr 4, 2014)
*BenikUI style in Shadow & Light edit.
*Detached Portraits at last! (Big thanks to Blazeflack).
*Added an option to make the non overlayed portraits transparent (detached or not).
*Removed the XP & Rep "Hide Text" option on the PlayerBar. Way too many checks with minimal result. Hiding the text can still be done in ElvUI General options.
*Applied a small fix for Skada style (Thanks Azilroka).
*Renamed the Mail datatext to BuiMail, so it doesn't conflict or show as duplicate, if another addon adds a similar datatext.

[b]0.42beta[/b] (Apr 2, 2014)
*Added 3 color themes plus the default ElvUI. 'Diablo' (dark red), 'Mists' (dark green), 'Hearthstone' (dark blue). Available in BenikUI options or in the install (step 3).
*Added AtlasLoot, Altoholic styled skin.
*Changed Tooltip statusbar texture.

[b]0.41beta[/b] (Mar 29, 2014)
*Added the default options for Target detached frame.

[b]0.40beta[/b] (Mar 29, 2014)
*Tiny changes on skin styling.
*Made another attempt on Target Detached Portrait. Mirrored the player one. Something is missing. Doesn't get the target changes onload. Re-enabling it or make any changes on target it applies.. reload and go kill yourself

[b]0.39beta[/b] (Mar 28, 2014)
*Reverted to Azilroka's skin file after his latest update in AddOnSkins (v2.15). A bit more fine tuning may needed.
*Removed the font.lua file. No need to force users to use BenikUI. On it's final release, BenikUI will have a seperate addon to override ElvUI name and damage font, to fit with BenikUI. What was added in 0.37b wasn't working as intended.
*Added option for the actionbars switch buttons. The user can now choose on which bar (1 or 2) the Switch buttons will show.
*Added style in WorldMap (needs testing for taints). The style applies only on small and quest map not on the big map.
*Fixed a visibility bug when the game menu and the bags were opened.
*Fine tune the install profile.

[b]0.38beta[/b] (Mar 25, 2014)